--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,18 +1,37 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "clang++ - Build and debug active file",
+      "type": "lldb",
+      "request": "launch",
+      "preLaunchTask": "C/C++: clang++ build active file",
+      "program": "${fileDirname}/${fileBasenameNoExtension}",
+      "args": [
+        "-arg1",
+        "-arg2"
+      ],
+      "terminal": "integrated",
+      "cwd": "${fileDirname}"
+    },
+    {
+      "name": "C/C++ Runner: Debug Session",
+      "type": "cppdbg",
+      "request": "launch",
+      "args": [],
+      "stopAtEntry": false,
+      "externalConsole": false,
+      "cwd": "/u/cs/ugrad/nguyend/cs33",
+      "program": "/u/cs/ugrad/nguyend/cs33/build/Debug/outDebug",
+      "MIMode": "gdb",
+      "miDebuggerPath": "gdb",
+      "setupCommands": [
         {
-            "name": "clang++ - Build and debug active file",
-            "type": "lldb",
-            "request": "launch",
-            "preLaunchTask": "C/C++: clang++ build active file",
-            "program": "${fileDirname}/${fileBasenameNoExtension}",
-            "args": ["-arg1", "-arg2"],
-            "terminal": "integrated",
-            "cwd": "${fileDirname}",
+          "description": "Enable pretty-printing for gdb",
+          "text": "-enable-pretty-printing",
+          "ignoreFailures": true
         }
-    ]
+      ]
+    }
+  ]
 }
